[metadata]
name = vb.utils
description = Collection of utilities used by Václav Brožík
version = attr: vb.utils.__version__
author = Václav Brožík
author_email = vaclav.brozik@global.ntt
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Environment :: Plugins
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
python_requires = >=3.8
package_dir =
    =src
packages = find_namespace:
# packages = find:
# include_package_data = True

[options.packages.find]
where = src

[tool:pytest]
minversion = 6.2
addopts = -ra --doctest-modules
testpaths =
    tests
    src/vb/utils

[flake8]
max-line-length = 88    # black formater style
